--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ Changelog = "https://github.com/lbignone/dataviz-panel/releases"
 python = "^3.6.1"
 click = "^7.0"
 panel = "^0.10.3"
+hvplot = "^0.7.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.2"
