--- a/mypy.ini
+++ b/mypy.ini
@@ -19,5 +19,6 @@ warn_unreachable = True
 warn_unused_configs = True
 warn_unused_ignores = True
 
+# Type annotations not supported for numpy <1.20.
 [mypy-numpy.*]
 ignore_missing_imports = True
