--- a/mypy.ini
+++ b/mypy.ini
@@ -18,3 +18,7 @@ warn_return_any = True
 warn_unreachable = True
 warn_unused_configs = True
 warn_unused_ignores = True
+
+# Type annotations not supported for numpy <1.20.
+[mypy-numpy.*]
+ignore_missing_imports = True
