--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,14 +12,13 @@ classifiers = [
     "Programming Language :: Python :: 3.6",
     "Programming Language :: Python :: 3.7",
     "Programming Language :: Python :: 3.8",
-    "Programming Language :: Python :: 3.9",
 ]
 
 [tool.poetry.urls]
 Changelog = "https://github.com/lbignone/dataviz-panel/releases"
 
 [tool.poetry.dependencies]
-python = "^3.6.1"
+python = "^3.6.1, <3.9"
 click = "^7.0"
 panel = "^0.10.3"
 hvplot = "^0.7.0"
