--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ python = "^3.6.1, <3.9"
 click = "^7.0"
 panel = "^0.10.3"
 hvplot = "^0.7.0"
+datashader = "^0.12.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.2"
