--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,9 +20,10 @@ Changelog = "https://github.com/lbignone/dataviz-panel/releases"
 [tool.poetry.dependencies]
 python = "^3.6.1, <3.9"
 click = "^7.0"
-panel = "^0.11.0"
+panel = "^0.10.3"
 hvplot = "^0.7.0"
 datashader = "^0.12.0"
+bokeh = "<2.3.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.2"
