--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,10 +18,9 @@ classifiers = [
 Changelog = "https://github.com/lbignone/dataviz-panel/releases"
 
 [tool.poetry.dependencies]
-python = "^3.6.1, <3.9"
+python = "^3.6.2, <3.9"
 click = "^7.0"
 panel = "^0.11.1"
-hvplot = "^0.7.0"
 datashader = "^0.12.1"
 
 [tool.poetry.dev-dependencies]
@@ -47,6 +46,7 @@ pre-commit-hooks = "^3.4.0"
 sphinx-rtd-theme = "^0.5.1"
 sphinx-click = "^2.7.1"
 Pygments = "^2.8.1"
+jupyterlab = "^3.0.13"
 
 [tool.poetry.scripts]
 dataviz-panel = "dataviz_panel.__main__:main"
