--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ python = "^3.6.2, <3.9"
 click = "^7.0"
 panel = "^0.11.3"
 datashader = "^0.12.1"
+holoviews = "^1.14.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.2"
