--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,6 +48,7 @@ sphinx-rtd-theme = "^0.5.1"
 sphinx-click = "^2.7.1"
 Pygments = "^2.8.1"
 jupyterlab = "^3.0.14"
+nbdime = "^3.0.0"
 
 [tool.poetry.scripts]
 dataviz-panel = "dataviz_panel.__main__:main"
