--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ python = "^3.6.2, <3.9"
 click = "^7.0"
 panel = "^0.11.3"
 datashader = "^0.12.1"
+holoviews = "^1.14.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.2"
@@ -47,6 +48,7 @@ sphinx-rtd-theme = "^0.5.1"
 sphinx-click = "^2.7.1"
 Pygments = "^2.8.1"
 jupyterlab = "^3.0.14"
+nbdime = "^3.0.0"
 
 [tool.poetry.scripts]
 dataviz-panel = "dataviz_panel.__main__:main"
