--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,6 @@ homepage = "https://github.com/lbignone/dataviz-panel"
 repository = "https://github.com/lbignone/dataviz-panel"
 documentation = "https://dataviz-panel.readthedocs.io"
 classifiers = [
-    "Programming Language :: Python :: 3.6",
     "Programming Language :: Python :: 3.7",
     "Programming Language :: Python :: 3.8",
 ]
@@ -18,11 +17,13 @@ classifiers = [
 Changelog = "https://github.com/lbignone/dataviz-panel/releases"
 
 [tool.poetry.dependencies]
-python = "^3.6.2, <3.9"
+python = "^3.7, <3.9"
 click = "^7.0"
 panel = "^0.11.3"
 datashader = "^0.12.1"
 holoviews = "^1.14.3"
+spatialpandas = "^0.3.6"
+matplotlib = "^3.4.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.2"
